language/move-lang/tests/move_check/translated_ir_tests/commands/use_before_assign.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/use_before_assign.move:2:9 ───
   │
 2 │     let x;
   │         ^ Unused local 'x'. Consider removing or prefixing with an underscore: '_x'
   │

error: 

   ┌── tests/move_check/translated_ir_tests/commands/use_before_assign.move:2:9 ───
   │
 3 │     let y = x;
   │             ^ Invalid local usage. Local 'x' was declared but could not infer the type. Try annotating the type here
   ·
 2 │     let x;
   │         - Local declared but not assigned here
   │

