language/move-lang/tests/move_check/translated_ir_tests/commands/use_before_assign.move
fun main() {
    let x;
    let y = x;
}

// check: COPYLOC_UNAVAILABLE_ERROR
